--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
         ECR_REPOSITORY: mywebapp
         IMAGE_TAG: v0.1
       run: |
-        cd web_app/
-        ls -ltra
+      
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker ps
@@ -44,9 +43,8 @@ jobs:
         ECR_REPOSITORY: mydb
         IMAGE_TAG: v0.1
       run: |
-        cd sql_app/
-        ls -ltra
+      
         # Docker building
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile_mysql .
         docker ps
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
